--- a/index.html
+++ b/index.html
@@ -117,6 +117,47 @@
 							</div>
 						</div>
 
+						<div id="pt-page-3" class="pt-page">
+							<div class="pageSheet">
+								<div class="contentSheet">
+									<div class="headerSheet">
+										<h1 class="titlePage">Observatorio</h1>
+									</div>
+									<div class="coo-column-12-12">
+										<div class="elementsPg3" id="elementpg3-1">
+											<img src="img/OB_IM_12.png" alt="">
+										</div>
+										<div class="elementsPg3" id="elementpg3-4">
+											<p class="txt txt1">¿Quiénes participan del observatorio?</p>
+										</div>
+										<div class="elementsPg3 fire-popup animated infinite zoomIn" id="elementpg3-5" data-pop="popup-1"></div>
+										<div class="elementsPg3" id="elementpg3-2">
+											<p class="txt txt1">¿Qué es el observatorio?</p>
+										</div>
+										<div class="elementsPg3 fire-popup animated infinite zoomIn" id="elementpg3-3" data-pop="popup-2"></div>
+										<div class="elementsPg3" id="elementpg3-6">
+											<p class="txt txt1">¿A quién se dirige?</p>
+										</div>
+										<div class="elementsPg3 fire-popup animated infinite zoomIn" id="elementpg3-7" data-pop="popup-3"></div>
+										</div>
+								</div>								
+								<div class="navPages navLeft">
+									<div class="dl-menu">
+										<ul class="dl-menu">
+											<li data-animation="29" data-page="1"></li>
+										</ul>                                                
+									</div>
+								</div>
+								<div class="navPages navRight">
+									<div class="dl-menu">
+										<ul class="dl-menu">
+											<li data-animation="28" data-page="3"></li>
+										</ul>                                                
+									</div>
+								</div>
+							</div>
+						</div>
+
 						<div id="pt-page-2" class="pt-page">
 							<div class="pageSheet">
 								<div class="contentSheet">
@@ -237,47 +278,6 @@
 								<div class="navPages navLeft">
 									<div class="dl-menu">
 										<ul class="dl-menu">
-											<li data-animation="29" data-page="1"></li>
-										</ul>                                                
-									</div>
-								</div>
-								<div class="navPages navRight">
-									<div class="dl-menu">
-										<ul class="dl-menu">
-											<li data-animation="28" data-page="3"></li>
-										</ul>                                                
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div id="pt-page-3" class="pt-page">
-							<div class="pageSheet">
-								<div class="contentSheet">
-									<div class="headerSheet">
-										<h1 class="titlePage">Observatorio</h1>
-									</div>
-									<div class="coo-column-12-12">
-										<div class="elementsPg3" id="elementpg3-1">
-											<img src="img/OB_IM_12.png" alt="">
-										</div>
-										<div class="elementsPg3" id="elementpg3-2">
-											<p class="txt txt1">¿Quiénes participan del observatorio?</p>
-										</div>
-										<div class="elementsPg3 fire-popup animated infinite zoomIn" id="elementpg3-3" data-pop="popup-1"></div>
-										<div class="elementsPg3" id="elementpg3-4">
-											<p class="txt txt1">¿Qué es el observatorio?</p>
-										</div>
-										<div class="elementsPg3 fire-popup animated infinite zoomIn" id="elementpg3-5" data-pop="popup-2"></div>
-										<div class="elementsPg3" id="elementpg3-6">
-											<p class="txt txt1">¿A quién se dirige?</p>
-										</div>
-										<div class="elementsPg3 fire-popup animated infinite zoomIn" id="elementpg3-7" data-pop="popup-3"></div>
-										</div>
-								</div>								
-								<div class="navPages navLeft">
-									<div class="dl-menu">
-										<ul class="dl-menu">
 											<li data-animation="29" data-page="2"></li>
 										</ul>                                                
 									</div>
@@ -292,6 +292,8 @@
 							</div>
 						</div>
 
+						
+
 						<div id="pt-page-4" class="pt-page">
 							<div class="pageSheet">
 								<div class="contentSheet">
@@ -302,19 +304,19 @@
 										<p class="txt tcenter title1">OBSERVATORIO</p>
 										<div class="column-12-12 fila1">
 											<div class="column-4-12">
-												<div class="box1Pg4 animated infinite pulse" id="boxPg4_1" data-page="7">
+												<div class="box1Pg4 animated infinite bounce" id="boxPg4_1" data-page="7">
 													<div class="ico"><img src="img/OB_IM_13.png" alt=""></div>
 													<div class="titles title3">Alertas de mercado</div>
 												</div>
 											</div>
 											<div class="column-4-12">
-												<div class="box1Pg4 animated infinite pulse" id="boxPg4_2" data-page="9">
+												<div class="box1Pg4 animated infinite bounce" id="boxPg4_2" data-page="9">
 													<div class="ico"><img src="img/OB_IM_14.png" alt=""></div>
 													<div class="titles title3">Áreas de oportunidad</div>
 												</div>
 											</div>
 											<div class="column-4-12">
-												<div class="box1Pg4 animated infinite pulse" id="boxPg4_3" data-page="12">
+												<div class="box1Pg4 animated infinite bounce" id="boxPg4_3" data-page="12">
 													<div class="ico"><img src="img/OB_IM_15.png" alt=""></div>
 													<div class="titles title3">Oportunidades de innovación</div>
 												</div>
@@ -526,43 +528,43 @@
 											<div class="imgIco"><img src="img/OB_IM_17.png" alt=""></div>
 											<p class="txt tcenter title1">ÁREAS DE OPORTUNIDAD</p>
 										</div>
-										<div class="column-8-12">
-											<p class="txt tcenter txt1">Los 3 mercados ofrecen un espectro muy amplio para estudio, así que se debía especificar áreas de oportunidad dentro de cada mercado que focalizaran un poco más el ejercicio del observatorio, y pudieran ofrecer información de valor en temáticas – tendencia en el MUNDO.</p>
+										<div class="column-11-12" style="margin:0 auto;">
+											<p class="txt tcenter txt2">Los 3 mercados ofrecen un espectro muy amplio para estudio, así que se debía especificar áreas de oportunidad dentro de cada mercado que focalizaran un poco más el ejercicio del observatorio, y pudieran ofrecer información de valor en temáticas – tendencia en el MUNDO. En el 2012 se realizó una primera definición de estas áreas, Más tarde, en el 2014 el equipo del Plan CT+i de Ruta N realizó un trabajo de campo en donde se identificaron los proyectos y capacidades de empresas y grupos de investigación de la ciudad. Los resultados de este trabajo fueron contrastados con tendencias globales de crecimiento económico, y de este ejercicio fueron seleccionadas unas nuevas áreas de oportunidad dentro de los 3 mercados estratégicos definidos como se indica a continuación:</p>
 										</div>
-										<div class="column-10-12 colSection">
+										<div class="column-11-12 colSection" style="margin:0 auto;">
 											<div class="column-4-12">
-												<p class="titles tcenter title2 tAction animated pulse infinite">SALUD</p>
-												<ul>
-													<li class="txt2">Energías alternativas y renovables, con énfasis en energía solar, eólica no tradicional, micro y pico centrales</li>
-													<li class="txt2">Biohidrocarburos obtenidos a partir de algas</li>
-													<li class="txt2">Almacenamiento de hidrógeno</li>
-													<li class="txt2">Almacenamiento de energía eléctrica</li>
-													<li class="txt2">Microredes Inteligente</li>
-													<li class="txt2">Medición Inteligente</li>
-												</ul>
+												<p class="titles tcenter title2 tAction animated pulse infinite fire-popup" data-pop="popup-6">SALUD</p>
+												<!-- <ul>
+													<li class="txt3">Energías alternativas y renovables, con énfasis en energía solar, eólica no tradicional, micro y pico centrales</li>
+													<li class="txt3">Biohidrocarburos obtenidos a partir de algas</li>
+													<li class="txt3">Almacenamiento de hidrógeno</li>
+													<li class="txt3">Almacenamiento de energía eléctrica</li>
+													<li class="txt3">Microredes Inteligente</li>
+													<li class="txt3">Medición Inteligente</li>
+												</ul> -->
 											</div>
 											<div class="column-4-12">
-												<p class="titles tcenter title2 tAction animated pulse infinite">ENERGÍA</p>
-												<ul>
-													<li class="txt2">Nanomedicina</li>
-													<li class="txt2">Ingeniería de Tejidos y Terapia Celular</li>
-													<li class="txt2">Terapia génica</li>
-													<li class="txt2">Telesalud</li>
-													<li class="txt2">Informática Biomédica</li>
-													<li class="txt2">Agentes terapéuticos para el tratamiento de complicaciones asociadas a la obesidad, énfasis diabetes</li>
-													<li class="txt2">Enfermedades tropicales</li>
-												</ul>
+												<p class="titles tcenter title2 tAction animated pulse infinite fire-popup" data-pop="popup-7">ENERGÍA</p>
+												<!-- <ul>
+													<li class="txt3">Nanomedicina</li>
+													<li class="txt3">Ingeniería de Tejidos y Terapia Celular</li>
+													<li class="txt3">Terapia génica</li>
+													<li class="txt3">Telesalud</li>
+													<li class="txt3">Informática Biomédica</li>
+													<li class="txt3">Agentes terapéuticos para el tratamiento de complicaciones asociadas a la obesidad, énfasis diabetes</li>
+													<li class="txt3">Enfermedades tropicales</li>
+												</ul> -->
 											</div>
 											<div class="column-4-12">
-												<p class="titles tcenter title2 tAction animated pulse infinite">TIC</p>
-												<ul>
-													<li class="txt2">Videojuegos para móviles</li>
-													<li class="txt2">Aplicaciones móviles en Salud</li>
-													<li class="txt2">Internet of Things</li>
-													<li class="txt2">Big Data</li>
-													<li class="txt2">Plataformas de infraestructura y aplicaciones  Cloud Computing</li>
-													<li class="txt2">SSO - Smart Water Management</li>
-												</ul>
+												<p class="titles tcenter title2 tAction animated pulse infinite fire-popup" data-pop="popup-8">TIC</p>
+												<!-- <ul>
+													<li class="txt3">Videojuegos para móviles</li>
+													<li class="txt3">Aplicaciones móviles en Salud</li>
+													<li class="txt3">Internet of Things</li>
+													<li class="txt3">Big Data</li>
+													<li class="txt3">Plataformas de infraestructura y aplicaciones  Cloud Computing</li>
+													<li class="txt3">SSO - Smart Water Management</li>
+												</ul> -->
 											</div>
 										</div>
 									</div>
@@ -780,6 +782,55 @@
 			<div class="full-image">
 				<img src="img/OB_IM_24.png" alt="">
 			</div>
+		</script>
+
+		<script id="popup-6" type="text/template">
+		    <div class="content-pop">
+				<div class="info-pop dflex-pop" style="flex-direction: column;">
+					<p class="txt txt1 tcenter" style="color:#b2ce06;">SALUD</p>
+					<ul>
+						<li class="txt txt3">Energías alternativas y renovables, con énfasis en energía solar, eólica no tradicional, micro y pico centrales</li>
+						<li class="txt txt3">Biohidrocarburos obtenidos a partir de algas</li>
+						<li class="txt txt3">Almacenamiento de hidrógeno</li>
+						<li class="txt txt3">Almacenamiento de energía eléctrica</li>
+						<li class="txt txt3">Microredes Inteligente</li>
+						<li class="txt txt3">Medición Inteligente</li>
+					</ul>
+				</div>
+		    </div>
+		</script>
+
+		<script id="popup-7" type="text/template">
+		    <div class="content-pop">
+		    	<div class="info-pop dflex-pop" style="flex-direction: column;">
+			    	<p class="txt txt1 tcenter" style="color:#b2ce06;">ENERGÍA</p>
+					<ul>
+						<li class="txt txt3">Nanomedicina</li>
+						<li class="txt txt3">Ingeniería de Tejidos y Terapia Celular</li>
+						<li class="txt txt3">Terapia génica</li>
+						<li class="txt txt3">Telesalud</li>
+						<li class="txt txt3">Informática Biomédica</li>
+						<li class="txt txt3">Agentes terapéuticos para el tratamiento de complicaciones asociadas a la obesidad, énfasis diabetes</li>
+						<li class="txt txt3">Enfermedades tropicales</li>
+					</ul>
+				</div>
+		    </div>
+		</script>
+
+		<script id="popup-8" type="text/template">
+		    <div class="content-pop">
+				<div class="info-pop dflex-pop" style="flex-direction: column;">
+					<p class="txt txt1 tcenter" style="color:#b2ce06;">TIC</p>
+					<ul>
+						<li class="txt txt3">Videojuegos para móviles</li>
+						<li class="txt txt3">Aplicaciones móviles en Salud</li>
+						<li class="txt txt3">Internet of Things</li>
+						<li class="txt txt3">Big Data</li>
+						<li class="txt txt3">Plataformas de infraestructura y aplicaciones  Cloud Computing</li>
+						<li class="txt txt3">SSO - Smart Water Management</li>
+					</ul>
+				</div>
+		    </div>
 		</script>
 		
 		<script type="text/javascript" src="js/vendors.min.js"></script>
